--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -99,7 +99,7 @@ double-click-right =
 cursor-click =
 cursor-scroll =
 
-font-0 = Hack Nerd Font:style=Regular:size=10
+font-0 = Hack Nerd Font Mono:style=Regular:size=10
 font-1 = Hack Nerd Font:style=Regular:size=15
 font-2 = Hack Nerd Font:style=Regular:size=20
 font-3 = Hack Nerd Font:style=Regular:size=25
@@ -123,86 +123,14 @@ width = 100%
 ; width = 1890
 
 ; modules-center = fs-root fs-home memory swap cpu
-modules-left = dwm 
+modules-left = hlwm
 modules-right =  keyboard ethernet wifi netspeed sep brightness volume battery date launcher google
 
-[module/dwm]
-type = internal/dwm
-format = <label-tags> <label-layout> <label-floating> <label-title>
-;socket-path = /tmp/dwm.sock
-
-enable-tags-click = true
-enable-tags-scroll = true
-tags-scroll-empty = false
-tags-scroll-reverse = false
-tags-scroll-wrap = true
-enable-layout-click = true
-enable-layout-scroll = true
-layout-scroll-wrap = true
-layout-scroll-reverse = true
-
-; If enable-layout-click = true, clicking the layout symbol will switch to this layout
-; secondary-layout-symbol = %{F#608B4E} [M] %{F-}
-secondary-layout-symbol = [M]
-
-; Tagas:
-; Available tokens:
-;   %name%
-
-label-floating = %{F#98c379}F%{F-}
-
-label-title = %title%
-label-title-maxlen = 10
-label-title-padding = 1
-label-title-foreground = #ffffff
-label-title-background = ${colors.light_green}
-
-; label-title-background = ${colors.background}
-
-label-layout = %symbol%
-label-layout-font = 2
-; label-layout-padding = 1
-label-layout-foreground = ${colors.light_green}
-label-layout-background = ${colors.bg}
-
-; focused = Active tag on focused monitor
-label-focused = %name%
-label-focused-background = ${colors.light_green}
-label-focused-foreground = ${colors.darkgrey}
-label-focused-padding = 2
-label-focused-font = 1
-
-; unfocused = Inactive tag on any monitor
-label-unfocused = %name%
-label-unfocused-background = ${colors.yellow}
-; label-unfocused-background = ${colors2.tag-unfocused-background}
-label-unfocused-foreground = ${colors.cyan}
-; label-unfocused-foreground = ${colors.foreground}
-; label-unfocused-padding = 2
-label-unfocused-font = 2
-
-; visible = Active tag on unfocused monitor
-label-visible = %name%
-; label-visible = " %name%%{T4}|%{T-}"
-label-visible-background = ${colors.grey}
-label-visible-foreground = ${colors.cream}
-label-visible-padding = 2
-label-visible-font = 1
-; format-label-visible = <label-visible>
-; format-label-visible-padding = 2
-
-; urgent = Tag with urgency hint set
-label-urgent = %name%
-label-urgent-background = ${colors.red}
-label-urgent-padding = 1
-label-urgent-font = 1
-
-; empty = Tags with no windows assigned
-; This can be set to an empty string to hide empty tags
-label-empty = ""
-
-; Separator in between workspaces
-; label-separator = |
-; label-separator-font = 4 
+[module/hlwm]
+type = custom/script
+exec = ~/.config/polybar/scripts/info-hlwm-workspaces.sh
+tail = true
+scroll-up = herbstclient use_index -1 --skip-visible &
+scroll-down = herbstclient use_index +1 --skip-visible &
 
 ; vim:ft=dosini
