--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -389,7 +389,7 @@ label-connected-font = 1
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nm-connection-editor:}Offline%{A}%{A}"
+label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}Offline%{A}%{A}"
 ; label-disconnected = " %{A2:nm-connection-editor:}Offline %{A}"
 ;;label-disconnected-foreground = #66ffffff
 
@@ -664,11 +664,11 @@ content-foreground = ${colors.darkgrey}
 content-padding = 1
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
-click-left =  rofi -show combi 
+click-left =  rofi -show combi
 
 [module/links]
 type = custom/text
-content-background = ${colors.bg} 
+content-background = ${colors.bg}
 content-foreground = ${colors.middlegrey}
 content-padding = 3
 
