hlwm & polybar changes

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -212,7 +212,7 @@ label-charging = " %percentage%%"
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = "<ramp-capacity> <label-discharging>"
 format-discharging-background = ${colors.bg}
 format-discharging-foreground = ${colors.orange}
 format-discharging-margin = 1
@@ -351,12 +351,13 @@ accumulate-stats = true
 ; Available tags:
 ;   <label-connected> (default)
 ;   <ramp-signal>
-format-connected = " <label-connected> "
+format-connected = "<label-connected>  "
+format-connected-font = 2
 format-connected-prefix = "|"
 format-connected-prefix-font = 8
 format-connected-background = ${colors.info_yellow}
 format-connected-foreground = ${colors.bg}
-; format-connected-padding = 2
+; format-connected-padding = 1
 
 ; Available tags:
 ;   <label-disconnected> (default)
@@ -384,7 +385,7 @@ format-disconnected-padding = 1
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
 ; label-connected = " %{A1:networkmanager_dmenu &:}%essid% %{A} %{F#78909C} %downspeed%  %upspeed%%{F-} "
-label-connected = " %{A1:~/.local/bin/networkmanager_dmenu:}%{A2:/usr/bin/nmtui:}%essid%%{A}%{A}"
+label-connected = " %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:bash -c '/usr/bin/nmtui':}%{T9}%{T} %essid%%{A}%{A}"
 label-connected-font = 1
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -446,7 +447,7 @@ label-connected = " %downspeed:0:100%   %upspeed:0:100%"
 label-connected-font = 1
 label-connected-width = 20
 format-connected = <label-connected>
-format-connected-padding = 1
+format-connected-padding = 2
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -613,7 +614,7 @@ blacklist-1 = scroll lock
 ;   <label-indicator> (default)
 format = "<label-layout><label-indicator>"
 format-prefix = "   "
-; format-prefix-font = 2 
+format-prefix-font = 4
 format-prefix-foreground = #000
 format-background = #bc99ed
 format-padding-right = 1
@@ -657,7 +658,7 @@ label-empty-foreground = ${colors.blue}
 [module/launcher]
 type = custom/text
 content = " "
-
+content-font = 2
 ; "content" has the same properties as "format-NAME"
 content-background = ${colors.cyan}
 content-foreground = ${colors.darkgrey}
@@ -677,7 +678,7 @@ inherit = module/links
 content = 
 content-font = 2
 content-foreground = #039619
-content-background = #ffffff
+content-background = #ffff45
 ; content-foreground = ${colors.google}
 content-padding = 1
 click-left = exo-open https://www.google.com/ &
