--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -102,11 +102,12 @@ cursor-scroll =
 font-0 = Hack Nerd Font Mono:style=Regular:size=10
 font-1 = Hack Nerd Font:style=Regular:size=15
 font-2 = Hack Nerd Font:style=Regular:size=20
-font-3 = Hack Nerd Font:style=Regular:size=25
+font-3 = Hack Nerd Font:style=Regular:size=13;2
 font-4 = FiraCode Nerd Font Mono:size=10;1
 font-5 = FiraCode Nerd Font Mono:size=10;2
 font-6 = FiraCode Nerd Font Mono:size=10;3
 font-7 = Hack Nerd Font:style=Regular:size=25;2
+font-8 = Hack Nerd Font Mono:style=Regular:size=18;2
 ; font-2 = Font Awesome 5 Free:size=10;2
 ; font-3 = Font Awesome 5 Free Solid:size=10;2
 ; font-4 = Font Awesome 5 Brands:size=10;2
