--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -5,21 +5,24 @@ time = %H:%M
 ; time = %I:%M %p
 interval = 5
 
-label = %date%  %time%
+label = "%date% %{B#CE9178}%{F#2f343f} %{T2} %{T}%{B- F-}%{B#C4C7C5}%{F#2f343f} %time% %{B- F-}"
 label-font = 1
-
-format-prefix = " "
-format-prefix-font = 2
-format-prefix-padding-right = 1
-format-prefix-padding-left = 0
+label-padding = 1
+label-background = ${colors.background-alt}
+label-foreground = ${colors.background}
 
 format-padding = 1
 ; format-margin = 2
-; format-underline = ${colors.bg}
-format-overline = ${colors.bg}
-format-prefix-foreground = ${colors.bg}
-format-foreground = ${colors.section_bg}
-format-background = ${colors.string_orange}
+format-underline = ${colors.background}
+format-overline = ${colors.background}
+; format-foreground = ${colors.section_bg}
+; format-background = ${colors.string_orange}
+format-prefix = " "
+format-prefix-font = 2
+format-prefix-padding-right = 1
+format-prefix-padding-left = 1
+format-prefix-foreground = ${colors.background}
+format-prefix-background = ${colors.yellow}
 
 [module/xbacklight]
 type = internal/xbacklight
@@ -39,11 +42,13 @@ card = intel_backlight
 ;   <label> (default)
 ;   <ramp>
 ;   <bar>
-format = <ramp> <label>
-format-background = ${colors.bg}
-format-foreground = ${colors.light_blue}
-; format-padding = 2
-format-margin = 1
+format = <ramp><label>
+format-underline = ${colors.background}
+format-overline = ${colors.background}
+; format-background = ${colors.bg}
+; format-foreground = ${colors.light_blue}
+format-padding = 1
+; format-margin = 1
 ; format-prefix = " "
 ; format-prefix-font = 8
 
@@ -51,14 +56,20 @@ format-margin = 1
 ;   %percentage% (default)
 label = " %percentage%%"
 label-font = 1
+label-padding = 1
+label-background = ${colors.background-alt}
+label-foreground = ${colors.background}
 
 ; Only applies if <ramp> is used
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 = " "
+ramp-1 = " "
+ramp-2 = " "
+ramp-3 = " "
+ramp-4 = " "
 ramp-font = 2
+ramp-padding = 1
+ramp-background = ${colors.light_blue}
+ramp-foreground = ${colors.background}
 
 
 [module/volume]
@@ -66,37 +77,47 @@ type = internal/pulseaudio
 
 ramp-volume-0 = 奄
 ramp-volume-1 = 奔
-ramp-volume-2 = 墳
-ramp-volume-3 = 
-
-ramp-volume-foreground = ${colors.lightest_green}
+ramp-volume-2 = "墳 "
+ramp-volume-3 = " "
+ramp-volume-foreground = ${colors.background}
+ramp-volume-background = ${colors.magenta}
+ramp-volume-padding = 1
 ramp-volume-font = 2
 ; ramp-volume-padding-right = 1
 
 label-volume = "%percentage%%"
-label-volume-background = ${colors.bg}
-label-volume-foreground = ${colors.lightest_green}
+label-volume-background = ${colors.background-alt}
+label-volume-foreground = ${colors.background}
+label-volume-padding = 1
+; label-volume-background = ${colors.bg}
+; label-volume-foreground = ${colors.lightest_green}
 
-format-volume = <ramp-volume> <label-volume>
+format-volume = <ramp-volume><label-volume>
 format-volume-padding = 1
+format-volume-overline = ${colors.background}
+format-volume-underline = ${colors.background}
 ; format-volume-margin = 1
 ; format-volume-background = ${colors.bg}
-format-volume-overline = ${colors.bg}
+; format-volume-overline = ${colors.bg}
 ; format-volume-underline = ${colors.blue}
 
-label-muted = %percentage%%
+label-muted = mute
+label-muted-foreground = ${colors.background-alt}
+label-muted-background = ${colors.background}
+label-muted-padding = 1
 
-format-muted-prefix = 婢
-format-muted-prefix-font = 2
-format-muted-prefix-padding-right = 1
-format-muted-prefix-foreground = ${colors.error_red}
-
-; format-muted-padding = 1
+; format-muted-overline = ${colors.bg}
+; format-muted-underline = ${colors.error_red}
+format-muted-padding = 1
 ; format-muted-margin = 1
-format-muted-foreground = ${colors.error_red}
-format-muted-background = ${colors.bg}
-format-muted-overline = ${colors.bg}
-format-muted-underline = ${colors.error_red}
+format-muted-prefix = 婢
+format-muted-underline = ${colors.background}
+format-muted-overline = ${colors.background}
+format-muted-prefix-font = 2
+format-muted-prefix-foreground = ${colors.background}
+format-muted-prefix-background = ${colors.error_red}
+format-muted-prefix-padding = 1
+
 ; [module/volume]
 ; type = internal/pulseaudio
 
@@ -191,72 +212,108 @@ poll-interval = 60
 ; Default: %H:%M:%S
 time-format = %H:%M
 
-; Available tags:
-;   <label-charging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-charging>
-format-charging = <animation-charging> <label-charging>
-format-charging-background = ${colors.bg}
-format-charging-foreground = ${colors.orange}
-format-charging-margin = 1
-; format-charging-padding = 2
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current charge rate in watts)
-label-charging = " %percentage%%"
 
-; Available tags:
-;   <label-discharging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-discharging>
-format-discharging = "<ramp-capacity> <label-discharging>"
-format-discharging-background = ${colors.bg}
-format-discharging-foreground = ${colors.orange}
-format-discharging-margin = 1
-; format-discharging-padding = 2
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
-label-discharging = " %percentage%%"
 
 ; Available tags:
 ;   <label-full> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 format-full = <label-full>
-format-full-foreground = ${colors.orange}
+format-full-padding = 1
+format-full-overline = ${colors.background}
+format-full-underline = ${colors.background}
+; format-full-foreground = ${colors.orange}
 format-full-prefix = ""
 format-full-prefix-font = 2
-format-full-prefix-foreground = ${colors.orange}
-; format-full-prefix-padding-right = 1
-format-full-margin = 1
+format-full-prefix-padding = 1
+format-full-prefix-background = ${colors.blue}
+format-full-prefix-foreground = ${colors.background}
+; format-full-margin = 1
 ; format-full-padding = 2
 ; Available tokens:
 ;   %percentage% (default)
-label-full = " %percentage%%"
+label-full = "%percentage%%"
 label-full-font = 1
+label-full-padding = 1
+label-full-background = ${colors.background-alt}
+label-full-foreground = ${colors.background}
+
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-discharging>
+format-discharging = "<ramp-capacity><label-discharging>"
+; format-discharging-foreground = ${colors.background}
+; format-discharging-background = ${colors.orange}
+; format-discharging-margin = 1
+format-discharging-padding = 1
+
+; format-discharging-font = 5
+; Available tokens:
+;   %percentage% (default)
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
+label-discharging = "%percentage%%"
+label-discharging-background = ${colors.background-alt}
+label-discharging-foreground = ${colors.background}
+label-discharging-padding = 1
 
 ; Only applies if <ramp-capacity> is used
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+; ramp-capacity-0 = 
+; ramp-capacity-1 = 
+; ramp-capacity-2 = 
+; ramp-capacity-3 = 
+; ramp-capacity-4 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
 ramp-capacity-font = 2
+ramp-capacity-padding = 1
+ramp-capacity-foreground = ${colors.background}
+ramp-capacity-background = ${colors.orange}
+
 ; Only applies if <bar-capacity> is used
 ;bar-capacity-width = 10
+; Available tags:
+;
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
+format-charging = <animation-charging><label-charging>
+; format-charging-background = ${colors.background-alt}
+; format-charging-foreground = ${colors.orange}
+; format-charging-margin = 1
+format-charging-overline = ${colors.background}
+format-charging-underline = ${colors.background}
+format-charging-padding = 1
+; Available tokens:
+;   %percentage% (default)
+;   %time%
+;   %consumption% (shows current charge rate in watts)
+label-charging = "%percentage%%"
+label-charging-background = ${colors.background-alt}
+label-charging-foreground = ${colors.background}
+label-charging-padding = 1
 
 ; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = " "
+animation-charging-1 = " "
+animation-charging-2 = " "
+animation-charging-3 = " "
+animation-charging-4 = " "
 animation-charging-font = 2
+animation-charging-padding = 1
+animation-charging-background = ${colors.light_green}
+animation-charging-foreground = ${colors.background}
 
 ; Framerate in milliseconds
 animation-charging-framerate = 750
@@ -275,27 +332,30 @@ interval = 3.0
 ping-interval = 3.0
 
 label-connected = %local_ip%
-label-connected-foreground = ${colors.fg}
+label-connected-font = 1
+label-connected-padding = 1
 label-connected-background = ${colors.info_yellow}
+label-connected-foreground = ${colors.background}
 
-label-packetloss = %local_ip%
-label-packetloss-foreground = ${colors.fg}
+label-packetloss = 
+label-packetloss-foreground = ${colors.background}
 
 ; label-disconnected = ""
 format-disconnected = 
 format-disconnected-padding = 1
 format-disconnected-font = 2
 ; format-disconnected-margin = 0
-; format-disconnected-underline = ${colors.fg}
-format-disconnected-overline = ${colors.dark_blue}
+format-disconnected-underline = ${colors.background}
+format-disconnected-overline = ${colors.background}
 format-disconnected-background = ${colors.info_yellow}
-format-disconnected-foreground = ${colors.bg}
+format-disconnected-foreground = ${colors.background}
 
 format-connected = <label-connected>
 format-connected-prefix = 
-format-connected-prefix-font = 6
-format-connected-prefix-padding-right = 1
-format-connected-prefix-foreground = ${colors.cream}
+format-connected-prefix-font = 2
+format-connected-prefix-padding = 1
+format-connected-prefix-foreground = ${colors.background}
+format-connected-prefix-background = ${colors.info_yellow}
 
 format-connected-padding = 1
 ; format-connected-margin = 1
@@ -315,7 +375,7 @@ format-packetloss-padding = 1
 format-packetloss-overline = ${colors.bg}
 format-packetloss-background = ${colors.info_yellow}
 format-packetloss-foreground = ${colors.bg}
-format-packetloss = <label-connected>
+format-packetloss = <label-packetloss>
 
 [module/wifi]
 type = internal/network
@@ -351,28 +411,20 @@ accumulate-stats = true
 ; Available tags:
 ;   <label-connected> (default)
 ;   <ramp-signal>
-format-connected = "<label-connected>  "
-format-connected-font = 2
-format-connected-prefix = "|"
-format-connected-prefix-font = 8
+format-connected = <label-connected>
+format-connected-underline = ${colors.background}
+format-connected-overline = ${colors.background}
 format-connected-background = ${colors.info_yellow}
-format-connected-foreground = ${colors.bg}
+format-connected-foreground = ${colors.background}
 ; format-connected-padding = 1
-
-; Available tags:
-;   <label-disconnected> (default)
-format-disconnected = ﲁ <label-disconnected>
-format-disconnected-prefix = "|"
-format-disconnected-prefix-font = 8
-format-disconnected-background = ${colors.info_yellow}
-format-disconnected-foreground = ${colors.bg}
-format-disconnected-padding = 1
-
-; Available tags:
-;   <label-connected> (default)
-;   <label-packetloss>
-;   <animation-packetloss>
-;;format-packetloss = <animation-packetloss> <label-connected>
+; format-connected = <ramp-signal><label-connected>"
+; format-connected-font = 2
+format-connected-prefix = "|  "
+format-connected-prefix-padding = 1
+format-connected-prefix-font = 2
+; format-connected-prefix-background = ${colors.info_yellow}
+; format-connected-prefix-foreground = ${colors.background}
+; format-connected-padding = 1
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -385,15 +437,43 @@ format-disconnected-padding = 1
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
 ; label-connected = " %{A1:networkmanager_dmenu &:}%essid% %{A} %{F#78909C} %downspeed%  %upspeed%%{F-} "
-label-connected = " %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:bash -c '/usr/bin/nmtui':}%{T9}%{T} %essid%%{A}%{A}"
+; label-connected = %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:bash -c '/usr/bin/nmtui':}%{T9}%{T} %essid%%{A}%{A}
+label-connected = %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:alacritty -t nmtui -e nmtui:}%essid%%{A}%{A}
 label-connected-font = 1
+label-connected-padding = 1
+; label-connected-background = ${colors.info_yellow}
+; label-connected-foreground = ${colors.background}
+
+; Available tags:
+;   <label-disconnected> (default)
+format-disconnected = <label-disconnected>
+format-disconnected-padding = 1
+format-disconnected-underline = ${colors.background}
+format-disconnected-overline = ${colors.background}
+; format-disconnected-prefix = ﲁ
+; format-disconnected-prefix-font = 2
+; format-disconnected-prefix-padding = 1
+; format-disconnected-prefix-background = ${colors.info_yellow}
+; format-disconnected-prefix-foreground = ${colors.background}
+
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}Offline%{A}%{A}"
+; label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}Offline%{A}%{A}"
+label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}ﲁ%{A}%{A}"
+label-disconnected-font = 2
+label-disconnected-padding = 1
+label-disconnected-background = ${colors.info_yellow}
+label-disconnected-foreground = ${colors.background}
 ; label-disconnected = " %{A2:nm-connection-editor:}Offline %{A}"
 ;;label-disconnected-foreground = #66ffffff
 
+; Available tags:
+;   <label-connected> (default)
+;   <label-packetloss>
+;   <animation-packetloss>
+;;format-packetloss = <animation-packetloss> <label-connected>
+;
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ;   %local_ip%  [wireless+wired]
@@ -445,14 +525,15 @@ interval = 1
 ; Default: %ifname% %local_ip%
 label-connected = " %downspeed:0:100%   %upspeed:0:100%"
 label-connected-font = 1
-label-connected-width = 20
+; label-connected-width = 20
 format-connected = <label-connected>
-format-connected-padding = 2
+format-connected-padding = 1
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
 label-disconnected = ""
+label-disconnected-padding = 1
 ; label-disconnected = " Offline "
 ;;label-disconnected-foreground = #66ffffff
 
@@ -613,20 +694,28 @@ blacklist-1 = scroll lock
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
 format = "<label-layout><label-indicator>"
-format-prefix = "   "
-format-prefix-font = 4
-format-prefix-foreground = #000
-format-background = #bc99ed
-format-padding-right = 1
+format-underline = ${colors.background}
+format-overline = ${colors.background}
+format-prefix = " "
+format-prefix-font = 2
+format-prefix-padding = 1
+format-prefix-foreground = ${colors.background}
+format-prefix-background = ${colors.purple}
+; format-background = #bc99ed
+format-padding = 1
+format-margin = 1
 
 ; Available tokens:
 ;   %layout%
 ;   %name%
 ;   %number%
 ; Default: %layout%
-label-layout = "%layout% "
-label-layout-background = #bc99ed
-label-layout-foreground = #000
+label-layout = "%layout%"
+label-layout-padding = 1
+label-layout-background = ${colors.background-alt}
+label-layout-foreground = ${colors.background}
+; label-layout-background = #bc99ed
+; label-layout-foreground = #000
 
 ; Available tokens:
 ;   %name%
@@ -657,12 +746,18 @@ label-empty-foreground = ${colors.blue}
 
 [module/launcher]
 type = custom/text
+; content = "😁"
+; content = "💼"
 content = " "
 content-font = 2
 ; "content" has the same properties as "format-NAME"
-content-background = ${colors.cyan}
-content-foreground = ${colors.darkgrey}
+content-underline = ${colors.background}
+content-overline = ${colors.background}
+content-background = ${colors.middlegrey}
+; content-background = ${colors.cyan}
+content-foreground = ${colors.background}
 content-padding = 1
+content-margin = 2
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
 click-left =  rofi -show combi
@@ -675,10 +770,11 @@ content-padding = 3
 
 [module/google]
 inherit = module/links
-content = 
+content = ""
 content-font = 2
 content-foreground = #039619
-content-background = #ffff45
+content-background = ${colors.background}
+; content-background = #ffff45
 ; content-foreground = ${colors.google}
 content-padding = 1
 click-left = exo-open https://www.google.com/ &
@@ -687,7 +783,8 @@ click-left = exo-open https://www.google.com/ &
 type = custom/text
 content = "|"
 content-font = 8
-content-background = ${colors.bg}
+content-padding = 1
+content-background = ${colors.foreground}
 content-foreground = ${colors.magenta}
 ; content-padding = 2
 
