--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,5 +1,10 @@
 [colors]
 
+background = #2f343f
+background-alt = #C4C7C5
+foreground = #1C1E20
+foreground-alt = #C4C7C5
+
 bg = #282c34
 fg = #abb2bf
 section_bg = #38393f
