--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -60,14 +60,15 @@ monitor-strict = false
 override-redirect = false
 bottom = false
 fixed-center = false
-background = ${colors.bg}
+background = ${colors.foreground}
 foreground = ${colors.fg}
 underline-size = 2
+overline-size = 2
 underline-color = ${colors.section_bg}
 border-color = ${colors.section_bg}
 
-offset-x = 0
-offset-y = 0
+offset-x = 75
+offset-y = 5
 radius = 5
 height = 30
 radius-top = 5
@@ -83,11 +84,12 @@ locale =
 
 tray-position = right
 tray-detached = true
-tray-maxsize = 100
-tray-background = ${colors.dark_red}
-; tray-offset-x = 150
+tray-maxsize = 80
+tray-background = ${colors.foreground}
+; tray-background = ${colors.dark_red}
+tray-offset-x = 10
 ; tray-offset-y = 40
-; tray-padding = 0
+; tray-padding = 2
 ; tray-scale = 1.0
 
 click-left =
@@ -99,7 +101,7 @@ double-click-right =
 cursor-click =
 cursor-scroll =
 
-font-0 = Hack Nerd Font Mono:style=Regular:size=10
+font-0 = Hack Nerd Font:style=Regular:size=10
 font-1 = Hack Nerd Font:style=Regular:size=15
 font-2 = Hack Nerd Font:style=Regular:size=20
 font-3 = Hack Nerd Font:style=Regular:size=13;2
@@ -120,12 +122,12 @@ font-8 = Hack Nerd Font Mono:style=Regular:size=18;2
 
 [bar/main]
 inherit = config
-width = 100%
+width = 90%
 ; width = 1890
 
 ; modules-center = fs-root fs-home memory swap cpu
-modules-left = hlwm
-modules-right =  keyboard ethernet wifi netspeed sep brightness volume battery date launcher google
+modules-left = launcher hlwm
+modules-right =  keyboard ethernet wifi netspeed brightness volume battery date google sep sep
 
 [module/hlwm]
 type = custom/script
