--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -127,7 +127,8 @@ width = 90%
 
 ; modules-center = fs-root fs-home memory swap cpu
 modules-left = launcher hlwm
-modules-right =  keyboard ethernet wifi netspeed brightness volume battery date google sep sep
+modules-right =  keyboard wifi ethernet netspeed brightness volume battery date google sep sep
+; modules-right =  keyboard netspeed brightness volume battery date google sep sep
 
 [module/hlwm]
 type = custom/script
