--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -331,17 +331,11 @@ interface = eth0
 interval = 3.0
 ping-interval = 3.0
 
-label-connected = %local_ip%
-label-connected-font = 1
-label-connected-padding = 1
-label-connected-background = ${colors.info_yellow}
-label-connected-foreground = ${colors.background}
-
 label-packetloss = 
 label-packetloss-foreground = ${colors.background}
 
 ; label-disconnected = ""
-format-disconnected = 
+format-disconnected = "| "
 format-disconnected-padding = 1
 format-disconnected-font = 2
 ; format-disconnected-margin = 0
@@ -350,21 +344,27 @@ format-disconnected-overline = ${colors.background}
 format-disconnected-background = ${colors.info_yellow}
 format-disconnected-foreground = ${colors.background}
 
+label-connected = " %downspeed:0:100%   %upspeed:0:100%"
+label-connected-font = 1
+label-connected-padding = 1
+label-connected-foreground = ${colors.info_yellow}
+label-connected-background = ${colors.background}
+
 format-connected = <label-connected>
-format-connected-prefix = 
+format-connected-overline = ${colors.background}
+format-connected-underline = ${colors.background}
+format-connected-padding = 1
+format-connected-prefix = "| "
 format-connected-prefix-font = 2
 format-connected-prefix-padding = 1
 format-connected-prefix-foreground = ${colors.background}
 format-connected-prefix-background = ${colors.info_yellow}
-
-format-connected-padding = 1
 ; format-connected-margin = 1
 ; format-connected-underline = ${colors.dark_blue}
-format-connected-overline = ${colors.dark_blue}
-format-connected-background = ${colors.info_yellow}
-format-connected-foreground = ${colors.bg}
+; format-connected-background = ${colors.info_yellow}
+; format-connected-foreground = ${colors.bg}
 
-format-packetloss-prefix = 睊
+format-packetloss-prefix = "| 睊"
 format-packetloss-prefix-font = 6
 format-packetloss-prefix-padding-right = 1
 format-packetloss-prefix-foreground = ${colors.orange}
@@ -419,7 +419,7 @@ format-connected-foreground = ${colors.background}
 ; format-connected-padding = 1
 ; format-connected = <ramp-signal><label-connected>"
 ; format-connected-font = 2
-format-connected-prefix = "|  "
+format-connected-prefix = " "
 format-connected-prefix-padding = 1
 format-connected-prefix-font = 2
 ; format-connected-prefix-background = ${colors.info_yellow}
@@ -506,9 +506,6 @@ type = internal/network
 ; cat /proc/net/dev
 interface = wlan0
 
-format-connected-foreground = ${colors.info_yellow}
-format-connected-background = ${colors.bg}
-
 ; Seconds to sleep between updates
 ; Default: 1
 interval = 1
@@ -525,9 +522,12 @@ interval = 1
 ; Default: %ifname% %local_ip%
 label-connected = " %downspeed:0:100%   %upspeed:0:100%"
 label-connected-font = 1
+label-connected-foreground = ${colors.info_yellow}
+label-connected-background = ${colors.bg}
+label-connected-padding = 1
 ; label-connected-width = 20
 format-connected = <label-connected>
-format-connected-padding = 1
+; format-connected-padding = 1
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
