Conky configs added

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -85,7 +85,7 @@ ramp-volume-padding = 1
 ramp-volume-font = 2
 ; ramp-volume-padding-right = 1
 
-label-volume = "%percentage%%"
+label-volume = "%{A3:alacritty -t alsamixer -e alsamixer:}%percentage%%%{A}"
 label-volume-background = ${colors.background-alt}
 label-volume-foreground = ${colors.background}
 label-volume-padding = 1
