fzf and rofi cleanup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -124,7 +124,7 @@ width = 100%
 
 ; modules-center = fs-root fs-home memory swap cpu
 modules-left = dwm 
-modules-right =  keyboard ethernet wifi netspeed sep brightness volume battery date launcher google
+modules-right =  keyboard ethernet wifi netspeed sep brightness volume battery date launcher power
 
 [module/dwm]
 type = internal/dwm
