--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -83,7 +83,7 @@ enable-ipc = true
 locale =
 
 tray-position = right
-tray-detached = true
+tray-detached = false
 tray-maxsize = 80
 tray-background = ${colors.foreground}
 ; tray-background = ${colors.dark_red}
@@ -127,7 +127,7 @@ width = 90%
 
 ; modules-center = fs-root fs-home memory swap cpu
 modules-left = launcher hlwm
-modules-right =  keyboard wifi ethernet netspeed brightness volume battery date google sep sep
+modules-right =  keyboard wifi ethernet netspeed brightness volume battery date power sep sep
 ; modules-right =  keyboard netspeed brightness volume battery date google sep sep
 
 [module/hlwm]
