--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -762,6 +762,21 @@ content-margin = 2
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
 click-left =  rofi -show combi
 
+
+[module/power]
+type = custom/text
+content = ""
+content-font = 2
+; "content" has the same properties as "format-NAME"
+content-underline = ${colors.background}
+content-overline = ${colors.background}
+content-background = ${colors.middlegrey}
+; content-background = ${colors.cyan}
+content-foreground = ${colors.background}
+content-padding = 1
+content-margin = 2
+click-left = rofi-power
+
 [module/links]
 type = custom/text
 content-background = ${colors.bg}
