hlwm and polybar set

--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -55,7 +55,7 @@ pseudo-transparency = true
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
 monitor = eDP-1
-monitor-fallback = eDP1
+monitor-fallback = eDP-1-1
 monitor-strict = false
 override-redirect = false
 bottom = false
@@ -67,7 +67,7 @@ overline-size = 2
 underline-color = ${colors.section_bg}
 border-color = ${colors.section_bg}
 
-offset-x = 75
+offset-x = 25
 offset-y = 5
 radius = 5
 height = 30
@@ -83,11 +83,11 @@ enable-ipc = true
 locale =
 
 tray-position = right
-tray-detached = false
+tray-detached = true
 tray-maxsize = 80
 tray-background = ${colors.foreground}
 ; tray-background = ${colors.dark_red}
-tray-offset-x = 10
+tray-offset-x = 80
 ; tray-offset-y = 40
 ; tray-padding = 2
 ; tray-scale = 1.0
@@ -127,7 +127,7 @@ width = 90%
 
 ; modules-center = fs-root fs-home memory swap cpu
 modules-left = launcher hlwm
-modules-right =  keyboard wifi ethernet netspeed brightness volume battery date power sep sep
+modules-right =  keyboard wifi ethernet netspeed brightness volume battery date power
 ; modules-right =  keyboard netspeed brightness volume battery date google sep sep
 
 [module/hlwm]
