--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -18,18 +18,18 @@ format-overline = ${colors.background}
 ; format-foreground = ${colors.section_bg}
 ; format-background = ${colors.string_orange}
 format-prefix = " "
-format-prefix-font = 2
+format-prefix-font = 4
 format-prefix-padding-right = 1
 format-prefix-padding-left = 1
 format-prefix-foreground = ${colors.background}
 format-prefix-background = ${colors.yellow}
 
-[module/xbacklight]
-type = internal/xbacklight
-enable-scroll = true
+; [module/xbacklight]
+; type = internal/xbacklight
+; enable-scroll = true
 
 [module/brightness]
-inherit = module/xbacklight
+; inherit = module/xbacklight
 type = internal/backlight
 
 enable-scroll = true
@@ -66,7 +66,7 @@ ramp-1 = " "
 ramp-2 = " "
 ramp-3 = " "
 ramp-4 = " "
-ramp-font = 2
+ramp-font = 4
 ramp-padding = 1
 ramp-background = ${colors.light_blue}
 ramp-foreground = ${colors.background}
@@ -74,6 +74,9 @@ ramp-foreground = ${colors.background}
 
 [module/volume]
 type = internal/pulseaudio
+sink = alsa_output.pci-0000_00_1b.0.analog-stereo
+
+click-right = pavucontrol
 
 ramp-volume-0 = 奄
 ramp-volume-1 = 奔
@@ -85,7 +88,8 @@ ramp-volume-padding = 1
 ramp-volume-font = 2
 ; ramp-volume-padding-right = 1
 
-label-volume = "%{A3:alacritty -t alsamixer -e alsamixer:}%{A1:pavucontrol:}%percentage%%%{A}"
+label-volume = "%{A2:alacritty -t alsamixer -e alsamixer:}%percentage%%{A}"
+; label-volume = "%{A3:alacritty -t alsamixer -e alsamixer:}%{A1:pavucontrol:}%percentage%%%{A}"
 label-volume-background = ${colors.background-alt}
 label-volume-foreground = ${colors.background}
 label-volume-padding = 1
@@ -194,7 +198,7 @@ full-at = 99
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
 battery = BAT0
-adapter = AC
+adapter = AC0
 
 ; If an inotify event haven't been reported in this many
 ; seconds, manually poll for new values.
@@ -224,7 +228,7 @@ format-full-overline = ${colors.background}
 format-full-underline = ${colors.background}
 ; format-full-foreground = ${colors.orange}
 format-full-prefix = ""
-format-full-prefix-font = 2
+format-full-prefix-font = 4
 format-full-prefix-padding = 1
 format-full-prefix-background = ${colors.blue}
 format-full-prefix-foreground = ${colors.background}
@@ -275,7 +279,7 @@ ramp-capacity-6 = 
 ramp-capacity-7 = 
 ramp-capacity-8 = 
 ramp-capacity-9 = 
-ramp-capacity-font = 2
+ramp-capacity-font = 4
 ramp-capacity-padding = 1
 ramp-capacity-foreground = ${colors.background}
 ramp-capacity-background = ${colors.orange}
@@ -310,7 +314,7 @@ animation-charging-1 = " "
 animation-charging-2 = " "
 animation-charging-3 = " "
 animation-charging-4 = " "
-animation-charging-font = 2
+animation-charging-font = 4
 animation-charging-padding = 1
 animation-charging-background = ${colors.light_green}
 animation-charging-foreground = ${colors.background}
@@ -327,7 +331,7 @@ animation-charging-framerate = 750
 ;
 [module/ethernet]
 type = internal/network
-interface = eth0
+interface = enp2s0
 interval = 3.0
 ping-interval = 3.0
 
@@ -381,7 +385,7 @@ format-packetloss = <label-packetloss>
 type = internal/network
 
 ; cat /proc/net/dev
-interface = wlan0
+interface = wlp3s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -504,7 +508,7 @@ ramp-signal-2 = 說
 type = internal/network
 
 ; cat /proc/net/dev
-interface = wlan0
+interface = wlp3s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -697,7 +701,7 @@ format = "<label-layout><label-indicator>"
 format-underline = ${colors.background}
 format-overline = ${colors.background}
 format-prefix = " "
-format-prefix-font = 2
+format-prefix-font = 4
 format-prefix-padding = 1
 format-prefix-foreground = ${colors.background}
 format-prefix-background = ${colors.purple}
@@ -749,13 +753,13 @@ type = custom/text
 ; content = "😁"
 ; content = "💼"
 content = " "
-content-font = 2
+content-font = 4
 ; "content" has the same properties as "format-NAME"
 content-underline = ${colors.background}
 content-overline = ${colors.background}
-content-background = ${colors.middlegrey}
+content-foreground = ${colors.middlegrey}
 ; content-background = ${colors.cyan}
-content-foreground = ${colors.background}
+content-background = ${colors.foreground}
 content-padding = 1
 content-margin = 2
 
@@ -765,17 +769,17 @@ click-left =  rofi -show combi
 
 [module/power]
 type = custom/text
-content = ""
-content-font = 2
+content = "  "
+content-font = 4
 ; "content" has the same properties as "format-NAME"
 content-underline = ${colors.background}
 content-overline = ${colors.background}
-content-background = ${colors.middlegrey}
+content-foreground = ${colors.middlegrey}
 ; content-background = ${colors.cyan}
-content-foreground = ${colors.background}
-content-padding = 1
-content-margin = 2
-click-left = rofi-power
+content-background = ${colors.foreground}
+; content-padding = 1
+; content-margin = 2
+click-left = ~/.local/bin/rofi-power
 
 [module/links]
 type = custom/text
