hlwm and polybar fix

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -776,7 +776,7 @@ content-underline = ${colors.background}
 content-overline = ${colors.background}
 content-foreground = ${colors.middlegrey}
 ; content-background = ${colors.cyan}
-content-background = ${colors.foreground}
+content-background = ${colors.tbackground}
 ; content-padding = 1
 ; content-margin = 2
 click-left = ~/.local/bin/rofi-power
