--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,9 +1,21 @@
 # Date    : 17/02/2019
 # Version : v3.0.1
 
-# Shadow
+log-level = "info";
+log-file = "$HOME/compton.log";
+
+#################################
+#             Shadows           #
+#################################
+
+
+# Enabled client-side shadows on windows. Note desktop windows
+# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
+# unless explicitly requested using the wintypes option.
+#
+# shadow = false
 shadow = true;
-shadow-opacity = .75
+# shadow-opacity = .75
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -16,7 +28,8 @@ shadow-exclude = [
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@:c",
+	"class_g = 'Peek'"
 ];
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude-reg = "x10+0+0";
@@ -29,7 +42,30 @@ active-opacity = 1.0;
 inactive-opacity-override = false;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
-blur-background = true;
+
+#################################
+#     Background-Blurring       #
+#################################
+
+
+# Parameters for background blurring, see the *BLUR* section for more information.
+# blur-method = "dual_kawase"
+blur: {
+	method = "dual_kawase";
+	strength = 7;
+	background = false;
+}
+# blur-size = 12
+#
+# blur-deviation = false
+#
+# blur-strength = 7
+
+# Blur background of semi-transparent / ARGB windows.
+# Bad in performance, with driver-dependent behavior.
+# The name of the switch may change without prior notifications.
+
+# blur-background = false;
 # blur-background-frame = true;
 blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
@@ -37,6 +73,9 @@ blur-kern = "3x3box";
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
+	"class_g = 'Peek'",
+	"class_g = 'discord'",
+	"class_g = 'Pavucontrol'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -54,6 +93,15 @@ fade-out-step = 0.03;
 fade-exclude = [
 ];
 
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 4
+
 # Other
 #backend = "glx";
 backend = "xrender";
@@ -65,7 +113,7 @@ detect-client-opacity = true;
 refresh-rate = 0;
 vsync = "false";
 # sw-opti = true;
-# unredir-if-possible = true;
+unredir-if-possible = false;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
 #focus-exclude = [ "class_g = 'Cairo-clock'" ];
