--- a/.config/polybar/configHLWM.ini
+++ b/.config/polybar/configHLWM.ini
@@ -60,7 +60,7 @@ monitor-strict = false
 override-redirect = false
 bottom = false
 fixed-center = false
-background = ${colors.foreground}
+background = ${colors.tbackground}
 foreground = ${colors.fg}
 underline-size = 2
 overline-size = 2
@@ -85,7 +85,7 @@ locale =
 tray-position = right
 tray-detached = true
 tray-maxsize = 80
-tray-background = ${colors.foreground}
+tray-background = ${colors.tbackground}
 ; tray-background = ${colors.dark_red}
 tray-offset-x = 80
 ; tray-offset-y = 40
