--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -335,11 +335,15 @@ interface = enp2s0
 interval = 3.0
 ping-interval = 3.0
 
+; click-right = "alacritty -t nmtui -e nmtui"
+
 label-packetloss = 
 label-packetloss-foreground = ${colors.background}
 
+label-disconnected = %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:alacritty -t nmtui -e nmtui:}%{A}%{A}
 ; label-disconnected = ""
-format-disconnected = "| "
+format-disconnected = | <label-disconnected>
+; format-disconnected = "| "
 format-disconnected-padding = 1
 format-disconnected-font = 2
 ; format-disconnected-margin = 0
