polybar gruvbox added

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -5,7 +5,7 @@ time = %H:%M
 ; time = %I:%M %p
 interval = 5
 
-label = "%date% %{B#CE9178}%{F#2f343f} %{T2} %{T}%{B- F-}%{B#C4C7C5}%{F#2f343f} %time% %{B- F-}"
+label = "%date% %{B#CE9178}%{F#2f343f} %{T2} %{T-}%{B- F-}%{B#C4C7C5}%{F#2f343f} %time% %{B- F-}"
 label-font = 1
 label-padding = 1
 label-background = ${colors.background-alt}
@@ -352,7 +352,7 @@ format-disconnected-overline = ${colors.background}
 format-disconnected-background = ${colors.info_yellow}
 format-disconnected-foreground = ${colors.background}
 
-label-connected = " %downspeed:0:100%   %upspeed:0:100%"
+label-connected = " "
 label-connected-font = 1
 label-connected-padding = 1
 label-connected-foreground = ${colors.info_yellow}
