--- a/.config/polybar/modulesGruvbox.ini
+++ b/.config/polybar/modulesGruvbox.ini
@@ -147,10 +147,10 @@ format-volume-background = ${colors.semi-trans}
 
 label-muted = mute
 label-muted-foreground = ${colors.fg}
-label-muted-background = ${colors.semi-trans}
+; label-muted-background = ${colors.semi-trans}
 ; label-muted-padding = 1
 
-format-muted = 婢 <label-muted>
+format-muted = %{T5}婢%{T-} <label-muted>
 format-muted-foreground = ${colors.magenta}
 format-muted-background = ${colors.semi-trans}
 format-muted-padding = 1
