--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -26,6 +26,7 @@ shadow-exclude = [
 	"name = 'Notification'",
 	"class_g = 'VirtualBox'",
 	"class_g = 'Conky'",
+	"class_g = 'Rofi'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
 	"_GTK_FRAME_EXTENTS@:c",
